Her skriver du en beskrivende melding om endringene

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Regnskapsførerlisten.no - Finn din regnskapsfører</title>
+    <title>Skjønnhetsklinikker..no - Finn din nye klinikk</title>
     <meta name="description" content="Finn den beste regnskapsføreren for din bedrift. Sammenlign priser og tjenester fra autoriserte regnskapsførere i hele Norge." />
     <meta name="author" content="Netsure AS" />
     <meta property="og:image" content="/og-image.png" />
